fix: overflow issues fixed on mobile view. Affected Files: Navbar, BreedList and globals.scss

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -91,7 +91,7 @@ main {
 }
 
 @media screen and (max-width: 576px) {
-  .left {
+  .left, .right {
     margin: 0 25px;
     width: calc(100vw - 50px);
   }
